# libhangul-t13n

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README.md  TAGS  configure.ac
data/: geography.txt  proper-nouns.txt
po/: ChangeLog  Makevars  en_US.po  libhangul-t13n.pot  libhtr.pot
src/: CMakeLists.txt  Makefile.am  common.h  encoding.c  encoding.h  hangeul-romaja.c  hangeul-romaja.h  hangeul.h  hangeulconv  hangeulconv.c  hangeulconv.h  hangul.c  hangul.h  hangulconv.c  hangulconv.h  ipa.c  ipa.h  libhangeul-romaja.c  libhangeul-romaja.h  libhangul-t13n.c  libhangul-t13n.h  libhtr.c  libhtr.h  mccune-reischauer.h  mccune_reischauer.c  mccune_reischauer.h  parser.c  parser.h  progname.c  progname.h  pronunciation.h  revised-romanization.h  revised_romanization.c  revised_romanization.h  romaja.h  skats.c  types.c  types.h  unicode.c  unicode.h  (+6 more)
test/: CMakeLists.txt  main.c  test_hangeul_strlen.c  test_hangeul_to_yale.c  test_hangeul_to_yale_original.c  test_utility.h  test_yale_original_to_hangeul.c  yale.c
tests/: Makefile.am  euckr_to_utf8_test  euckr_to_utf8_test.c  kontsevich_test  kontsevich_test.c  macros.h  mccune_reischauer_test  mccune_reischauer_test.c  revised_romanization_test  revised_romanization_test.c  skats_test  skats_test.c  tests.h  ucschar_to_utf8char_str_test.c  utf8_to_ucs_test  utf8_to_ucs_test.c  utf8_to_ucschar_test.c  yale_test  yale_test.c
tools/: CMakeLists.txt  hangeulconv.c
