function(add_test_executable _name)
    add_executable(${_name} main.c test_${_name}.c)
    target_link_libraries(${_name} hangeul-romaja)
    add_test(${_name} ${_name})
endfunction()

include_directories(${libhangeul-romaja_SOURCE_DIR}/src)
link_directories(${libhangeul-romaja_BINARY_DIR}/lib)

add_test_executable(hangeul_to_yale)
add_test_executable(yale_to_hangeul)
add_test_executable(hangeul_to_mccune_reischauer)
add_test_executable(mccune_reischauer_to_hangeul)
add_test_executable(hangeul_to_revised_romanization)
add_test_executable(revised_romanization_to_hangeul)
add_test_executable(hangeul_to_yale_original)
add_test_executable(yale_original_to_hangeul)
